deploy/rating-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rating-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rating-service
  template:
    metadata:
      labels:
        app: rating-service
    spec:
      containers:
        - name: rating-service
          image: quay.io/rh_ee_ozimakov/rating-service:0.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
              initialDelaySeconds: 3
              periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
              initialDelaySeconds: 3
              periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: rating-service
  labels:
    app: rating-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: rating-service
