deploy/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: servicemesh-demo-gateway
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: servicemesh-demo
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  hosts:
    - "*"
  gateways:
    - servicemesh-demo-gateway
  http:
    - match:
        - uri:
            prefix: /v1/product
      rewrite:
        uri: /product
      route:
        - destination:
            host: product-service
            subset: v1
          weight: 75
        - destination:
            host: product-service
            subset: v2
          weight: 25
    - match:
        - uri:
            prefix: /v1/review
      rewrite:
        uri: /review
      route:
        - destination:
            host: review-service
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: product-destrule
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  host: product-service
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
      trafficPolicy:
        loadBalancer:
          simple: ROUND_ROBIN
